--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 </form>
 
 <form action="/searchFlightStatus" method="POST">
-	<h1>Search flight status by flight number, arrival/departure date</h1>
+	<h1>Check flight status by flight number, arrival/departure date</h1>
 	<input type="text" name = "flight_num" placeholder="e.g. 123"> </br>
 	<input type="date" name = "departure_date"> </br>
 	<input type="date" name = "arrival_date"> </br>
@@ -43,13 +43,6 @@
     <input type="submit" value = Check />
 </form>
 
-<form action="/purchaseC1" method="POST">
-    <h1>Search for ticket to purchase</h1>
-    <input type="text" name = "dept_airport" placeholder="e.g. PVG"> </br>
-    <input type="text" name = "arr_airport" placeholder="e.g. JFK"> </br>
-    <input type="date" name = "departure_date"> </br>
-    <input type="submit" value = Get_Info />
-</form>
 
 {% endif %}
     
