--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -24,7 +24,7 @@
             {% if type %}
             <td>
             <a href={{url_for('purchaseC2',airline_name=line['airline_name'],
-                flight_num=line['flight_num'])}}> buy </a>
+                flight_num=line['flight_num'])}}> {{type}} </a>
             </td>
             {% endif %}
         </tr>
