--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     <input type="submit" value = Check />
 </form>
 
-
+<a href="/checkSpending">Check my spending</a>
 {% endif %}
     
 </body>
