--- a/templates/chartagent.html
+++ b/templates/chartagent.html
@@ -16,36 +16,27 @@
 </head>
 
 <body>
-	{% if act=='Spending' %}
-		<form action="/checkSpending" method="POST">
-			<h1>Check Spending by date</h1></br>
-			<input type="month" name = "start_date" /required > to <input type="month" name = "end_date" /required > </br>
-			<input type="submit" value = Check />
-		</form>
-		{% if data %}
-		{% if total_spending %}
-			<p>Your total spending in this time period is: {{total_spending}}</p></br>
-		{% endif %}
-	{% endif %}
-	
+	<p>View top customers<\p>
 	<div id="container" style="width: 75%;">
 		<canvas id="canvas"></canvas>
+	</div><\br>
+	
+	<div id="container1" style="width: 75%;">
+		<canvas id="canvas1"></canvas>
 	</div>
 	
 	<script>
-	
 		var color = Chart.helpers.color;
 		var barChartData = {
 			labels: [],
 			datasets: [{
-				label: '{{act|safe}}',
+				label: 'tickets',
 				backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
 				borderColor: window.chartColors.red,
 				borderWidth: 1,
 				data: []
 			}]
 		};
-
 		window.onload = function() {
 			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myBar = new Chart(ctx, {
@@ -58,23 +49,57 @@
 					},
 					title: {
 						display: true,
-						text: '{{act|safe}}'
+						text: 'Top 5 customers of ticket number'
 					}
 				}
 			});
 		};
-		
-		var d={{data|safe}};
-		var l={{label|safe}};
+		var d={{data1|safe}};
+		var l={{label1|safe}};
 		console.log(l);
 		for (var i=0; i<l.length; i++){
 			barChartData.labels.push(l[i]);
 			barChartData.datasets[0].data.push(d[i]);
 		}
 		
+		var barChartData1 = {
+			labels: [],
+			datasets: [{
+				label: 'commission',
+				backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+				borderColor: window.chartColors.red,
+				borderWidth: 1,
+				data: []
+			}]
+		};
+		window.onload = function() {
+			var ctx = document.getElementById('canvas1').getContext('2d');
+			window.myBar = new Chart(ctx, {
+				type: 'bar',
+				data: barChartData1,
+				options: {
+					responsive: true,
+					legend: {
+						position: 'top',
+					},
+					title: {
+						display: true,
+						text: 'Top 5 customers of ticket commission'
+					}
+				}
+			});
+		};
+		d={{data2|safe}};
+		l={{label2|safe}};
+		console.log(l);
+		for (var i=0; i<l.length; i++){
+			barChartData1.labels.push(l[i]);
+			barChartData1.datasets[0].data.push(d[i]);
+		}
+		
 		window.myBar.update();
 	</script>
-    {% endif %}
+	
     {% if error %}
     <p class="error"><strong>Error:</strong> {{error}}</p>
     {% endif %}
