--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
     <input type="submit" value = Search />
 </form>
 
-<a href="/checkTop5">Check top customers</a>
+<a href="/checkTop5">Check top customers</a></br>
+<a href="/viewCommission">View my commission</a>
 
 {% endif %}
     
