--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,8 @@
 <a href="/checkTop5Agent">Check top booking agents</a></br>
 <a href="{{url_for('viewReport',interval=1) }}">View Report</a></br>
 <a href="/compareRevenue">Comparison of Revenue earned</a></br>
+<a href="/viewFrequentCustomer">Chect the most frequent customer</a></br>
+<a href="/viewTopDestination">Check the most popular destination</a></br>
 {% endif %}
     
 </body>
