--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -39,6 +39,10 @@
 	</table> 
 {% endif %}
 
+{% if flag %}
+
+<a href="/viewFrequentCustomer"> Back to last page </a></br>
+{% endif %}
 
 <a href="/">Back</a>
 
